# git-rename-commit

./: Cargo.toml  README.md  justfile  progress.txt
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: integration.rs
